--- a/about.html
+++ b/about.html
@@ -101,13 +101,13 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
-                                    <li><a href="about.html" class="nav-link">Over ons</a></li>
+                                    <li><a href="about.html" class="nav-link active">Over ons</a></li>
                                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                                 </ul>
                             </div>
@@ -165,7 +165,6 @@
                         <div class="page-banner-text">
                             <p>IN- EN VERKOOP VAN AUTO’S</p>
                             <h1>UW OCCASIONDEALER UIT VAASSEN.</h1>
-
                         </div>
                     </div>
                 </div>
@@ -192,7 +191,7 @@
             <div class="container">
                 <div class="about-content-area cpy-6">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6 mb-4">
                             <div class="about-content-wrapper">
                                 <div class="about-content">
                                     <h5 class="s-title">hsv auto’s vaassen</h5>
@@ -202,7 +201,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div class="about-img">
                                 <img src="assets/img/banner/5.png" alt="">
                             </div>
@@ -216,13 +215,13 @@
         <!-- SIGNATURE AREA  -->
         <div class="signature-area mt-0 cpy-8">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 mb-4">
-                        <div class="signature- area-img">
+                <div class="row reverse">
+                    <div class="col-lg-6 mb-4">
+                        <div class="signature-area-img">
                             <img src="assets/img/banner/6.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-6 mb-4">
+                    <div class="col-lg-6 mb-4">
                         <div class="signature-content">
                             <div class="dealer-info bg-white">
                                 <div class="info-inner">
@@ -261,7 +260,7 @@
                 </div>
                 <div class="team-content mt-4">
                     <div class="row">
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -270,7 +269,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -279,7 +278,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -288,7 +287,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -297,7 +296,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -306,7 +305,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -315,7 +314,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
@@ -324,7 +323,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                             <div class="team-card">
                                 <img src="assets/img/team.png" alt="" class="member-img">
                                 <div class="team-info">
