--- a/contact.html
+++ b/contact.html
@@ -101,14 +101,14 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
                                     <li><a href="about.html" class="nav-link">Over ons</a></li>
-                                    <li><a href="contact.html" class="nav-link">Contact</a></li>
+                                    <li><a href="contact.html" class="nav-link active">Contact</a></li>
                                 </ul>
                             </div>
 
@@ -177,7 +177,7 @@
         <div class="contact-area cpy-8">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-lg-6 mb-5">
                         <div class="contact-content">
                             <div class="get-in-tuch">
                                 <h1>Get in touch with the team.</h1>
@@ -219,7 +219,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="contact-form">
                             <div class="form-title">
                                 <img src="assets/img/icon/message.svg" alt="">
@@ -369,14 +369,14 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
                                     <li><a href="about.html" class="nav-link">Over ons</a></li>
-                                    <li><a href="contact.html" class="nav-link">Contact</a></li>
+                                    <li><a href="contact.html" class="nav-link active">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
