--- a/financiering.html
+++ b/financiering.html
@@ -101,11 +101,11 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
-                                    <li><a href="financiering.html" class="nav-link">Financiering</a></li>
+                                    <li><a href="financiering.html" class="nav-link active">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
                                     <li><a href="about.html" class="nav-link">Over ons</a></li>
                                     <li><a href="contact.html" class="nav-link">Contact</a></li>
@@ -215,12 +215,12 @@
                                 </h5>
                             </div>
                             <div class="row">
-                                <div class="col-md-6 mb-4">
+                                <div class="col-md-6 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="NAAM *">
                                     </div>
                                 </div>
-                                <div class="col-md-6 mb-4">
+                                <div class="col-md-6 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="email" class="form-control" placeholder="E-MAIL *">
                                     </div>
@@ -231,7 +231,7 @@
                                     </div>
                                 </div>
                                 <div class="form-submit">
-                                    <div class="col-md-4 ps-3">
+                                    <div class="col-md-4 col-sm-6 col-12 button-al">
                                         <button type="submit" class="submit-btn">verstuur</button>
                                     </div>
                                 </div>
@@ -250,7 +250,7 @@
         <div class="pay-attention cmy-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="page-banner-text">
                             <p>IN- EN VERKOOP VAN AUTO’S</p>
                             <h2>Let op! Geld lenen kost geld</h2>
@@ -364,11 +364,11 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
-                                    <li><a href="financiering.html" class="nav-link">Financiering</a></li>
+                                    <li><a href="financiering.html" class="nav-link active">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
                                     <li><a href="about.html" class="nav-link">Over ons</a></li>
                                     <li><a href="contact.html" class="nav-link">Contact</a></li>
