--- a/occasion.html
+++ b/occasion.html
@@ -101,8 +101,8 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
-                                    <li><a href="occasion.html" class="nav-link">Occassions</a></li>
+                                    <li><a href="index.html" class="nav-link ">Home</a></li>
+                                    <li><a href="occasion.html" class="nav-link active">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
@@ -198,9 +198,9 @@
                                 Alle merken
                             </button>
                             <ul class="filter-menu filter-one">
-                                <li class="active">
+                                <li>
                                     <div class="form-check">
-                                        <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <input class="form-check-input" checked type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
                                         <label class="form-check-label" for="flexRadioDefault2">
                                             Alle merken
                                         </label>
@@ -208,15 +208,23 @@
                                 </li>
                                 <li>
                                     <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                            Alle merken
+                                        </label>
+                                    </div>
+                                </li>
+                                <!-- <li>
+                                    <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
                                         <label class="form-check-label" for="flexRadioDefault3">
                                             Alle merken
                                         </label>
                                     </div>
-                                </li>
+                                </li> -->
                                 <li>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
+                                        <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault4">
                                         <label class="form-check-label" for="flexRadioDefault4">
                                             Alle merken
                                         </label>
@@ -224,7 +232,7 @@
                                 </li>
                                 <li>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
+                                        <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault5">
                                         <label class="form-check-label" for="flexRadioDefault5">
                                             Alle merken
                                         </label>
@@ -232,7 +240,7 @@
                                 </li>
                                 <li>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault6">
+                                        <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault6">
                                         <label class="form-check-label" for="flexRadioDefault6">
                                             Alle merken
                                         </label>
@@ -305,7 +313,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="filter-col-5 se-border">
+                    <div class="filter-col-5 se-border m-af-none">
                         <label>Merk</label>
                         <div class="dropdown filter-dp-manu">
                             <button class="dropdown-toggle filter-dp">
@@ -344,7 +352,7 @@
 
                 <div class="filter-proudt mt-4">
                     <div class="row">
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -401,8 +409,7 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -458,64 +465,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
-                            <div class="slider-card">
-                                <div class="car-view-slider">
-                                    <div class="swiper product-view-slider">
-                                        <div class="swiper-wrapper">
-                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
-                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
-                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
-                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
-                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
-
-                                        </div>
-                                        <div class="swiper-pagination"></div>
-                                    </div>
-
-                                    <div class="service-details">
-                                        <div class="card-block">
-                                            <div class="car-model">
-                                                <p class="model">VOLVO XC60</p>
-
-                                            </div>
-                                            <span class="car-v">
-                                                2.4D MOMENTUM AUTOMAAT
-                                            </span>
-                                        </div>
-                                        <div class="car-information car-s-info">
-                                            <div class="card-T-details">
-                                                <ul>
-                                                    <li>
-                                                        <p class="ml-text">Bouwjaar</p>
-                                                        <p class="st-text">2020</p>
-                                                    </li>
-                                                    <li>
-                                                        <p class="ml-text">KM. stand</p>
-                                                        <p class="st-text">32.000 <img src="assets/img/icon/stiker.svg" alt=""></p>
-                                                    </li>
-                                                    <li>
-                                                        <p class="ml-text">Brandstof</p>
-                                                        <p class="st-text">Diesel</p>
-                                                    </li>
-                                                </ul>
-                                            </div>
-
-
-                                        </div>
-                                        <div class="price-and-btn">
-                                            <div class="price">
-                                                <p>€10.995</p>
-                                            </div>
-                                            <a href="" class="custom-btn-alt">
-                                                Bekijk occasion
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -572,7 +522,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -629,7 +579,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -686,7 +636,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -743,7 +693,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -800,7 +750,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -857,7 +807,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -914,7 +864,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
@@ -971,7 +921,64 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 cmb-5">
+                        <div class="col-md-6 col-lg-4 cmb-5">
+                            <div class="slider-card">
+                                <div class="car-view-slider">
+                                    <div class="swiper product-view-slider">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
+                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
+                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
+                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
+                                            <div class="swiper-slide"><img src="assets/img/slider/1.png" class="slider-img" alt=""></div>
+
+                                        </div>
+                                        <div class="swiper-pagination"></div>
+                                    </div>
+
+                                    <div class="service-details">
+                                        <div class="card-block">
+                                            <div class="car-model">
+                                                <p class="model">VOLVO XC60</p>
+
+                                            </div>
+                                            <span class="car-v">
+                                                2.4D MOMENTUM AUTOMAAT
+                                            </span>
+                                        </div>
+                                        <div class="car-information car-s-info">
+                                            <div class="card-T-details">
+                                                <ul>
+                                                    <li>
+                                                        <p class="ml-text">Bouwjaar</p>
+                                                        <p class="st-text">2020</p>
+                                                    </li>
+                                                    <li>
+                                                        <p class="ml-text">KM. stand</p>
+                                                        <p class="st-text">32.000 <img src="assets/img/icon/stiker.svg" alt=""></p>
+                                                    </li>
+                                                    <li>
+                                                        <p class="ml-text">Brandstof</p>
+                                                        <p class="st-text">Diesel</p>
+                                                    </li>
+                                                </ul>
+                                            </div>
+
+
+                                        </div>
+                                        <div class="price-and-btn">
+                                            <div class="price">
+                                                <p>€10.995</p>
+                                            </div>
+                                            <a href="" class="custom-btn-alt">
+                                                Bekijk occasion
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 cmb-5">
                             <div class="slider-card">
                                 <div class="car-view-slider">
                                     <div class="swiper product-view-slider">
