--- a/purchase.html
+++ b/purchase.html
@@ -101,10 +101,10 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
-                                    <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
+                                    <li><a href="purchase.html" class="nav-link active">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
                                     <li><a href="about.html" class="nav-link">Over ons</a></li>
@@ -214,27 +214,27 @@
                                 </h5>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="MERK *">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="date" class="form-control" placeholder="MERK *">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="KLEUR *">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="MODEL/TYPE *">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <select class="select-input wide">
                                             <option selected>SOORT KENTEKEN </option>
@@ -246,7 +246,7 @@
                                           </select>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <select class="select-input wide">
                                             <option selected>TRANSMISSIE</option>
@@ -258,12 +258,12 @@
                                           </select>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="UITVOERING">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <select class="select-input wide">
                                             <option selected>CONDITIE</option>
@@ -275,17 +275,17 @@
                                           </select>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="BTW">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="BOUWJAAR">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <select class="select-input wide">
                                             <option selected>BRANDSTOF</option>
@@ -297,17 +297,17 @@
                                           </select>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="BPM **">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="KILOMETERSTAND">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <select class="select-input wide">
                                             <option selected>CARROSSERIE</option>
@@ -319,7 +319,7 @@
                                           </select>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="ONDERWERP:">
                                     </div>
@@ -343,38 +343,38 @@
                                 </h5>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="NAAM *">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="POSTCODE">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="TELEFOON *">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="ADRES">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="WOONPLAATS">
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-4">
+                                <div class="col-md-4 col-sm-6 mb-4">
                                     <div class="form-group">
                                         <input type="email" class="form-control" placeholder="E-MAIL *">
                                     </div>
                                 </div>
                                 <div class="form-submit">
-                                    <div class="col-md-4 ps-3">
+                                    <div class="col-md-4 col-sm-6 col-12 button-al">
                                         <button type="submit" class="submit-btn">verstuur</button>
                                     </div>
                                 </div>
