--- a/route.html
+++ b/route.html
@@ -101,12 +101,12 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
                                     <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
-                                    <li><a href="route.html" class="nav-link">Route</a></li>
+                                    <li><a href="route.html" class="nav-link active">Route</a></li>
                                     <li><a href="about.html" class="nav-link">Over ons</a></li>
                                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                                 </ul>
