--- a/single-car.html
+++ b/single-car.html
@@ -101,9 +101,9 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                                    <li><a href="index.html" class="nav-link">Home</a></li>
                                     <li><a href="occasion.html" class="nav-link">Occassions</a></li>
-                                    <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
+                                    <li><a href="single-car.html" class="nav-link active">Bestelauto's</a></li>
                                     <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
                                     <li><a href="financiering.html" class="nav-link">Financiering</a></li>
                                     <li><a href="route.html" class="nav-link">Route</a></li>
@@ -191,7 +191,7 @@
         <div class="single-car-show bg-white">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-lg-6 mb-4">
                         <div class="car-nasted-slider">
                             <div class="swiper car-show">
                                 <div class="swiper-wrapper">
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="car-full-info">
                             <div class="car-name-price">
                                 <div class="car-name-cat">
@@ -410,7 +410,7 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-accessoires" role="tabpanel" aria-labelledby="pills-accessoires-tab">
                             <div class="row">
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
                                     <div class="listing-item">
                                         <ul class="feature-list">
                                             <li>ABS</li>
@@ -427,7 +427,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
                                     <div class="listing-item">
                                         <ul class="feature-list">
                                             <li>Binnenspiegel automatisch dimmend</li>
@@ -442,7 +442,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
                                     <div class="listing-item">
                                         <ul class="feature-list">
                                             <li>Electronic Stability Program</li>
@@ -458,7 +458,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
                                     <div class="listing-item">
 
                                         <ul class="feature-list">
